unpackaged/main/default/objects/icatp__Usage_Update__e/icatp__Usage_Update__e.object-meta.xml
<CustomObject>
    <label>File Slayer Usage Update</label>
    <pluralLabel>File Slayer Usage Updates</pluralLabel>
</CustomObject>