unpackaged/main/default/objects/icatp__Usage_Update__e/fields/icatp__Action__c.field-meta.xml
<CustomField>
    <fullName>icatp__Action__c</fullName>
    <label>Action</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>