unpackaged/main/default/objects/icatp__Usage_Update__e/fields/icatp__Hit_List_Count__c.field-meta.xml
<CustomField>
    <fullName>icatp__Hit_List_Count__c</fullName>
    <label>Hit List Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>